add the banner section and latestnews section and add style

--- a/index.html
+++ b/index.html
@@ -42,6 +42,102 @@
                  <p>hello it's me</p>
             </div>
         </header>
+        <!-- end of the header -->
+
+        <section class="section1">
+            <div class="banner"></div>
+            <div class="banner-side">
+                <div class="side upper-side"></div>
+                <div class="side lower-side"></div>
+            </div>
+        </section>
+        <!-- end of section1 -->
+
+        <section class="section2">
+            <a href="#"><h2 class="headings">Latest News</h2></a>
+            <div class="latestnews">
+                <div class="items">
+                    <img src="" alt="">
+                    <caption>
+                    <p> Make working from home easier with this added laptop monitor on sale</p>
+                    </caption>
+                    <div class="time">
+                      <span><strong>TNW Deals</strong> 1 hour ago</span> 
+                    </div>
+                </div>
+                
+                <div class="items">
+                    <img src="" alt="">
+                    <caption>
+                    <p> Make working from home easier with this added laptop monitor on sale</p>
+                    </caption>
+                    <div class="time">
+                      <span><strong>TNW Deals</strong> 1 hour ago</span> 
+                    </div>
+                </div>
+
+                <div class="items">
+                    <img src="" alt="">
+                    <caption>
+                    <p> Make working from home easier with this added laptop monitor on sale</p>
+                    </caption>
+                    <div class="time">
+                      <span><strong>TNW Deals</strong> 1 hour ago</span> 
+                    </div>
+                </div>
+
+                <div class="items">
+                    <img src="" alt="">
+                    <caption>
+                    <p> Make working from home easier with this added laptop monitor on sale</p>
+                    </caption>
+                    <div class="time">
+                      <span><strong>TNW Deals</strong> 1 hour ago</span> 
+                    </div>
+                </div>
+
+                <div class="items">
+                    <img src="" alt="">
+                    <caption>
+                    <p> Make working from home easier with this added laptop monitor on sale</p>
+                    </caption>
+                    <div class="time">
+                      <span><strong>TNW Deals</strong> 1 hour ago</span> 
+                    </div>
+                </div>
+                
+                <div class="items">
+                    <img src="" alt="">
+                    <caption>
+                    <p> Make working from home easier with this added laptop monitor on sale</p>
+                    </caption>
+                    <div class="time">
+                      <span><strong>TNW Deals</strong> 1 hour ago</span> 
+                    </div>
+                </div>
+
+                <div class="items">
+                    <img src="" alt="">
+                    <caption>
+                    <p> Make working from home easier with this added laptop monitor on sale</p>
+                    </caption>
+                    <div class="time">
+                      <span><strong>TNW Deals</strong> 1 hour ago</span> 
+                    </div>
+                </div>
+
+                <div class="items">
+                    <img src="" alt="">
+                    <caption>
+                    <p> Make working from home easier with this added laptop monitor on sale</p>
+                    </caption>
+                    <div class="time">
+                      <span><strong>TNW Deals</strong> 1 hour ago</span> 
+                    </div>
+                </div>
+            </div>
+
+        </section>
     </main>
 </body>
 </html>
