adjusted text positions

--- a/index.html
+++ b/index.html
@@ -174,11 +174,11 @@
                             <p class="money">£300k</p>
                             <p class="seed">SEED FUND</p>
                         </div>
-                        <div class="fund3"><i class="fas fa-tag"></i>
-                            <p>Accounting +2</p>
-                            <i class="fa fa-briefcase" aria-hidden="true"></i>
-                            <p>
-                                Ben holmes, +4</p>
+                        <div class="fund3">
+                            <div class="fund6"><i class="fas fa-tag"></i>
+                            <p>Accounting +2</p></div>
+                            <div class="fund7"><i class="fa fa-briefcase" aria-hidden="true"></i>
+                            <p>Ben holmes, +4</p></div>
                         </div>
                         <div class="fund4">
                             <p>Claimer raises seed backing to make it easier for UK startups to claim R&D tax credits
@@ -198,11 +198,11 @@
                             <p class="money">$49M</p>
                             <p class="seed">SERIES E</p>
                         </div>
-                        <div class="fund3"><i class="fas fa-tag"></i>
-                            <p>Finance</p>
-                            <i class="fa fa-briefcase" aria-hidden="true"></i>
-                            <p>
-                                Kedaara Capital, +3</p>
+                        <div class="fund3">
+                            <div class="fund6"><i class="fas fa-tag"></i>
+                            <p>Finance</p></div>
+                            <div class="fund7"><i class="fa fa-briefcase" aria-hidden="true"></i>
+                            <p>Kedaara Capital, +3</p></div>
                         </div>
                         <div class="fund4">
                             <p>India: Veritas Finance lands $49m funding from Kedaara, Norwest, others
@@ -222,11 +222,11 @@
                             <p class="money">$8.1M</p>
                             <p class="seed">VENTURE CAPITAL</p>
                         </div>
-                        <div class="fund3"><i class="fas fa-tag"></i>
-                            <p>Messaging, +3</p>
-                            <i class="fa fa-briefcase" aria-hidden="true"></i>
-                            <p>
-                                Sisu Game Ventures, +4</p>
+                        <div class="fund3">
+                            <div class="fund6"><i class="fas fa-tag"></i>
+                            <p>Messaging, +3</p></div>
+                            <div class="fund7"><i class="fa fa-briefcase" aria-hidden="true"></i>
+                            <p>Sisu Game Ventures, +4</p></div>
                         </div>
                         <div class="fund4">
                             <p>Helsinki And Reykjavik Based Gaming Studio Mainframe Raises $8.1 Million
@@ -246,11 +246,11 @@
                             <p class="money">£1M</p>
                             <p class="seed">ANGEL</p>
                         </div>
-                        <div class="fund3"><i class="fas fa-tag"></i>
-                            <p>E-Commerce, +3</p>
-                            <i class="fa fa-briefcase" aria-hidden="true"></i>
-                            <p>
-                                Ryan Hood, +2</p>
+                        <div class="fund3">
+                            <div class="fund6"><i class="fas fa-tag"></i>
+                            <p>E-Commerce, +3</p></div>
+                            <div class="fund7"><i class="fa fa-briefcase" aria-hidden="true"></i>
+                            <p>Ryan Hood, +2</p></div>
                         </div>
                         <div class="fund4">
                             <p>Jumingo Raises Approx. €1M in Angel Funding
@@ -272,7 +272,8 @@
                 <div class="article-image">
                     <div class="gradient">
                         <div class="gradient-background">
-                            <ul class="gradient-list">
+                            <div></div>
+                            <div><ul class="gradient-list">
                                 <li><p>MOST POPULAR</p></li>
                                 <li><a href="#">
                                     YouTube, Apple TV+, and Amazon Prime Video reduce image quality in Europe following Netflix</a></li>
@@ -281,6 +282,7 @@
                                 <li><a href="#"><small>Napier Lopez .</small></a></li>
                                 <li><p>7hours ago</p></li>
                             </ul>
+                            </div>
                         </div>
                     </div>
                     <div class="disney">
@@ -319,7 +321,8 @@
                 <div class="article-image">
                     <div class="gradient">
                         <div class="gradient-background">
-                            <ul class="gradient-list">
+                            <div></div>
+                            <div><ul class="gradient-list">
                                 <li><p>MOST POPULAR</p></li>
                                 <li><a href="#">
                                     YouTube, Apple TV+, and Amazon Prime Video reduce image quality in Europe following Netflix</a></li>
@@ -328,6 +331,7 @@
                                 <li><a href="#"><small>Napier Lopez .</small></a></li>
                                 <li><p>7hours ago</p></li>
                             </ul>
+                            </div>
                         </div>
                     </div>
                     <div class="disney">
@@ -366,7 +370,8 @@
                 <div class="article-image">
                     <div class="gradient">
                         <div class="gradient-background">
-                            <ul class="gradient-list">
+                            <div></div>
+                            <div><ul class="gradient-list">
                                 <li><p>MOST POPULAR</p></li>
                                 <li><a href="#">
                                     YouTube, Apple TV+, and Amazon Prime Video reduce image quality in Europe following Netflix</a></li>
@@ -375,6 +380,7 @@
                                 <li><a href="#"><small>Napier Lopez .</small></a></li>
                                 <li><p>7hours ago</p></li>
                             </ul>
+                            </div>
                         </div>
                     </div>
                     <div class="disney">
@@ -413,7 +419,8 @@
                 <div class="article-image">
                     <div class="gradient">
                         <div class="gradient-background">
-                            <ul class="gradient-list">
+                            <div></div>
+                            <div><ul class="gradient-list">
                                 <li><p>MOST POPULAR</p></li>
                                 <li><a href="#">
                                     YouTube, Apple TV+, and Amazon Prime Video reduce image quality in Europe following Netflix</a></li>
@@ -422,6 +429,7 @@
                                 <li><a href="#"><small>Napier Lopez .</small></a></li>
                                 <li><p>7hours ago</p></li>
                             </ul>
+                            </div>
                         </div>
                     </div>
                     <div class="disney">
@@ -460,7 +468,8 @@
                 <div class="article-image">
                     <div class="gradient">
                         <div class="gradient-background">
-                            <ul class="gradient-list">
+                            <div></div>
+                            <div><ul class="gradient-list">
                                 <li><p>MOST POPULAR</p></li>
                                 <li><a href="#">
                                     YouTube, Apple TV+, and Amazon Prime Video reduce image quality in Europe following Netflix</a></li>
@@ -469,6 +478,7 @@
                                 <li><a href="#"><small>Napier Lopez .</small></a></li>
                                 <li><p>7hours ago</p></li>
                             </ul>
+                            </div>
                         </div>
                     </div>
                     <div class="disney">
@@ -507,7 +517,9 @@
                 <div class="article-image">
                     <div class="gradient">
                         <div class="gradient-background">
-                            <ul class="gradient-list">
+                            <div></div>
+                            <div>
+                                <ul class="gradient-list">
                                 <li><p>MOST POPULAR</p></li>
                                 <li><a href="#">
                                     YouTube, Apple TV+, and Amazon Prime Video reduce image quality in Europe following Netflix</a></li>
@@ -516,6 +528,7 @@
                                 <li><a href="#"><small>Napier Lopez .</small></a></li>
                                 <li><p>7hours ago</p></li>
                             </ul>
+                            </div>
                         </div>
                     </div>
                     <div class="disney">
@@ -554,7 +567,9 @@
                 <div class="article-image">
                     <div class="gradient">
                         <div class="gradient-background">
-                            <ul class="gradient-list">
+                            <div></div>
+                            <div>
+                                <ul class="gradient-list">
                                 <li><p>MOST POPULAR</p></li>
                                 <li><a href="#">
                                     YouTube, Apple TV+, and Amazon Prime Video reduce image quality in Europe following Netflix</a></li>
@@ -563,6 +578,7 @@
                                 <li><a href="#"><small>Napier Lopez .</small></a></li>
                                 <li><p>7hours ago</p></li>
                             </ul>
+                          </div>
                         </div>
                     </div>
                     <div class="disney">
@@ -601,7 +617,9 @@
                 <div class="article-image">
                     <div class="gradient">
                         <div class="gradient-background">
-                            <ul class="gradient-list">
+                            <div></div>
+                            <div>
+                                <ul class="gradient-list">
                                 <li><p>MOST POPULAR</p></li>
                                 <li><a href="#">
                                     YouTube, Apple TV+, and Amazon Prime Video reduce image quality in Europe following Netflix</a></li>
@@ -610,6 +628,7 @@
                                 <li><a href="#"><small>Napier Lopez .</small></a></li>
                                 <li><p>7hours ago</p></li>
                             </ul>
+                            </div>
                         </div>
                     </div>
                     <div class="disney">
