--- a/index.html
+++ b/index.html
@@ -15,25 +15,29 @@
             <nav>
                 <div class="nav1">
                     <ul class="ul1">
-                        <li><a href="#">about</a></li>
-                        <li><a href="#">about</a></li>
-                        <li><a href="#">about</a></li>
-                        <li><a href="#">about</a></li>
+                        <li><a href="#">News</a></li>
+                        <li><a href="#">TNW2020</a></li>
+                        <li><a href="#">Business ▾</a></li>
+                        <li><a href="#">AMAs</a></li>
+                        <li><a href="#">Spaces</a></li>
+                        <li><a href="#">Terms & Conditions</a></li>
                     </ul>
                     <ul class="ul2">
-                        <li><a href="#">about</a></li>
-                        <li><a href="#">about</a></li>
-                        <li><a href="#">about</a></li>
-                        <li><a href="#">about</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Advertise</a></li>
+                        <li><a href="#">Jobs</a></li>
+                        <li><a href="#">Contact</a></li>
                     </ul>
                 </div>
                 <div class="nav2">
                     <ul>
-                        <li><a href="#">about</a></li>
-                        <li><a href="#">about</a></li>
-                        <li><a href="#">about</a></li>
-                        <li><a href="#">about</a></li>
-                        <li><a href="#">about</a></li>
+                        <li><a href="#">LATEST</a></li>
+                        <li><a href="#">HARD FORK</a></li>
+                        <li><a href="#">PLUGGED</a></li>
+                        <li><a href="#">FUNDAMENTALS</a></li>
+                        <li><a href="#">README</a></li>
+                        <li><a href="#">GROWTH QUARTERS</a></li>
+                        <li><a href="#">NEURAL</a></li>
                     </ul>
                     <a class="search" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
                 </div>
