--- a/index.html
+++ b/index.html
@@ -1047,10 +1047,10 @@
                 </div>
             </div>
             <div class="footer2">
-                <div><a href="#">tnw</a>
-                    <p>© 2006–2020 The Next Web B.V. Made with ♥ in Amsterdam. Powered by</p>
-                    <a href="#">STACKPATH</a>
-                </div>
+                <div>
+                    <p><a href="#">tnw</a> © 2006–2020 The Next Web B.V. Made with <span id="love">♥</span> in Amsterdam. Powered by
+                    <a href="#">STACKPATH</a></p>
+                    </div>
             </div>
         </div>
     </footer>
