validate HTML and Liter error

--- a/index.html
+++ b/index.html
@@ -338,7 +338,8 @@
             </div>
         </section>
         <section class="section4">
-            <article>
+            <h2 id="hiden">Section 4</h2>
+            <article>                
                 <div class="apps">
                     <a href="#">
                         <h2 class="headings">Apps</h2>
