--- a/index.html
+++ b/index.html
@@ -1035,13 +1035,13 @@
 
                 </div>
                 <div class="foot2">
-                    <ul>
+                    <ul class="listss">
                         <li><a href="#">EVENTS</a></li>
                         <li><a href="#">ABOUT</a></li>
                         <li><a href="#">ADVERTISE</a></li>
                         <li><a href="#">JOB</a></li>
                         <li><a href="#">CONTACT</a></li>
-                        </ul>
+                    </ul>
                 </div>
             </div>
             <div class="footer2">
